--- a/codegen.yml
+++ b/codegen.yml
@@ -1,7 +1,8 @@
 overwrite: true
 schema: 'https://rickandmortyapi.com/graphql'
+documents: 'src/**/*.graphql'
 generates:
-  types/graphql.tsx:
+  src/__generated__/types.ts:
     plugins:
       - 'typescript'
       - 'typescript-operations'
